# quadsquad

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  flake.nix
assets/maps/: hangar.lvl
src/: main.cpp
src/camera/: Camera.cpp  Camera.hpp
src/components/: DroidAI.hpp  GrenadeComponent.hpp  Lifetime.hpp  Pickup.hpp  Projectile.hpp  RecoilState.hpp  RenderMesh.hpp  Transform.hpp  WeaponComponent.hpp
src/input/: InputManager.cpp  InputManager.hpp  PlayerInput.hpp
src/level/: LevelManager.cpp  LevelManager.hpp
src/particle/: ParticleSystem.cpp  ParticleSystem.hpp
src/physics/: AABB.hpp  CollisionSystem.cpp  CollisionSystem.hpp
src/renderer/: CubeMesh.cpp  CubeMesh.hpp  PostProcess.cpp  PostProcess.hpp  Shader.cpp  Shader.hpp
src/systems/: EnemySystem.cpp  EnemySystem.hpp  GrenadeSystem.cpp  GrenadeSystem.hpp  PickupSystem.cpp  PickupSystem.hpp  ProjectileSystem.cpp  ProjectileSystem.hpp
src/ui/: HUD.cpp  HUD.hpp
